# dentist-site

./: pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/core/: admin.py  forms.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_appointment_date.py  0003_alter_appointment_date.py  0004_remove_appointment_date.py  0005_appointment_date.py  0006_remove_appointment_date.py  0007_appointment_date_alter_appointment_email.py  0008_alter_appointment_date.py  0009_appointment_time.py  0010_alter_appointment_date.py  0011_rename_fname_appointment_first_name_and_more.py  0012_appointment_username.py  0013_contact.py
backend/core/static/: style.css
backend/core/templates/: base.html  booking.html  contact.html  dashboard.html  frontpage.html  login.html  myaccount.html  signup.html  success.html  update.html  updatemail.html
backend/static/: style.css
backend/staticfiles/: staticfiles.json  style.f497d6186796.css
